Fix sending backtraces across ractors

[Bug #21818]

Currently exceptions can be sent across ractors, but because of a limitation
in the API, the exception backtrace is duped as an empty backtrace.

The problem is that backtraces are embedded objects, hence the classic
`rb_class_alloc(klass)` API is insufficient because we need to know the
size of the Backtrace object we're duping to instantiate the copy.

This is solved by introducing a replacement for `rb_define_alloc_func`
which takes a function that receive both the class and the object being copied.

When used for an initial allocation, the copied object is set to Qundef.